fixed pot texture atlas bleeding

--- a/src/style.css
+++ b/src/style.css
@@ -95,7 +95,8 @@ li {
 #modeButtons {
     z-index: 10;
     position: absolute;
-    right: 10%;
+    //right: 10%;
+    right: 5%;
     bottom: 20%;
 
     display: flex;
@@ -740,7 +741,7 @@ li {
     display: none;
 }*/
 
-@media screen and (max-width: 400px) {
+@media screen and (max-width: 500px) {
 
     #walletContainer {
         display: none;
